<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EYWA</string>

    <string name="category_language">ENG</string>
    <string name="category_title">CATEGORIES</string>

    <string name="intro">Welcome to EYWA, we are a company dedicated to creating products with an educational and informative purpose. For this reason, we have decided to collaborate with Citizen Kane to give customers a unique and interactive experience with the world of cinema and, for this, we have created an interactive game. The purpose of this game is to test your knowledge of cinema and learn more about this great world. We wish you enjoy the game.</string>

    <string name="category_action">Action</string>
    <string name="category_scifi">Science fiction</string>
    <string name="category_comedy">Comedy</string>
    <string name="category_horror">Horror</string>
    <string name="category_animation">Animation</string>
    <string name="category_drama">Drama</string>
    <string name="btnPlay">PLAY</string>

    <string name="score">SCORE</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="difficulty">DIFFICULTY</string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">HARD</string>
    <string name="legend">LEGEND</string>

    <string name="loading">Loading</string>

    <string name="login_title">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_new">New here?</string>
    <string name="login_create">Create an account!</string>
    <string name="login_btn">Login</string>

    <string name="register_title">Register</string>
    <string name="password_repeat">Confirm password</string>
    <string name="register_have">You have an account?</string>
    <string name="register_login">Login!</string>
    <string name="register_btn">register</string>

    <string name="press_anywhere_to_continue">PRESS ANYWHERE TO CONTINUE</string>
    <string name="eywa_team">EYWA TEAM</string>
    <string name="date_register">Date of Register</string>
    <string name="best_score">BEST SCORE</string>
    <string name="achievements">Achievements</string>
    <string name="match_history">MATCH HISTORY</string>
    <string name="category_performance">PERFORMANCE BY CATEGORY</string>
    <string name="no_games">THERE\'RE NO GAMES</string>
    <string name="no_games_low">No games played</string>
    <string name="points">Points</string>
    <string name="category">CATEGORY</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="confirm">CONFIRM</string>
    <string name="gallery">GALLERY</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="no_achievement">NO ACHIEVEMENT UNLOCKED</string>
    <string name="congratulations">CONGRATULATIONS</string>
    <string name="achievements_score">ACHIEVEMENTS</string>


</resources>