<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/txtViewDifficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/difficulty"
        android:textSize="70sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        />


    <LinearLayout
        android:id="@+id/buttonCategory"
        android:tag="Action"
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corners_white"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
       >

        <ImageView
            android:id="@+id/imageCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:src="@drawable/gun" />

        <TextView
            android:id="@+id/textCategory"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/category_action"
            android:textColor="@color/purple_eywa"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginEnd="25dp"/>


    </LinearLayout>

    <!--
    <Button
        android:id="@+id/categoryButton"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:background="@drawable/rounded_corners_white"
        android:text="lorem"
        android:textColor="@color/purple_eywa"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:clickable="false"
        />

        !-->

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnEasy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/easy"
            android:textColor="@color/purple_eywa"
            android:background="@drawable/rounded_corners_white"
            android:backgroundTint="@color/white"
            android:layout_margin="20dp"
            />

        <Button
            android:id="@+id/btnMedium"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/medium"
            android:textColor="@color/purple_eywa"
            android:background="@drawable/rounded_corners_white"
            android:backgroundTint="@color/white"
            android:layout_margin="20dp"
            />

        <Button
            android:id="@+id/btnHard"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hard"
            android:textColor="@color/purple_eywa"
            android:background="@drawable/rounded_corners_white"
            android:backgroundTint="@color/white"
            android:layout_margin="20dp"
            />

        <Button
            android:id="@+id/btnLegend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/legend"
            android:textColor="@color/purple_eywa"
            android:background="@drawable/rounded_corners_white"
            android:backgroundTint="@color/white"
            android:layout_margin="20dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:background="@drawable/rounded_corners_white"
        android:backgroundTint="@color/amarillo_eywa"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/btnPlay"
        android:textStyle="bold"
        android:textColor="@color/purple_eywa"
        android:textSize="@dimen/button_text"
        />


</LinearLayout>